kubernetes/ingress-v2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: "learning.net.ar"
      http:
        paths:
          - path: /users-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: users-service
                port:
                  number: 80
          - path: /courses-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: courses-service
                port:
                  number: 80
          - path: /exercises-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: exercises-service
                port:
                  number: 80
          - path: /math-learning-frontend(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: math-learning-frontend
                port:
                  number: 80
          - path: /math-solver(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: math-solver
                port:
                  number: 80
          - path: /pgadmin(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
