kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiuba-rpl-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /users-service
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 80
          - path: /courses-service
            pathType: Prefix
            backend:
              service:
                name: courses-service
                port:
                  name: courses-service
          - path: /exercises-service
            pathType: Prefix
            backend:
              service:
                name: exercises-service
                port:
                  number: 80
          - path: /math-learning-frontend(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: math-learning-frontend
                port:
                  number: 80
